[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydefender"
version = "1.0.0"
description = "Advanced malware detection tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]

[project.scripts]
pydefender = "pydefender.cli:main"
